# server/src/interfaces/job.interface.ts
@@ -113,6 +113,7 @@ export enum JobName {
 
   // Notification
   NOTIFY_SIGNUP = 'notify-signup',
+  NOTIFY_RESETPASSWORD = 'notify-resetpassword',
   NOTIFY_EMAIL_VERIFIY = 'notify-email.verify',
   NOTIFY_ALBUM_INVITE = 'notify-album-invite',
   NOTIFY_ALBUM_UPDATE = 'notify-album-update',
@@ -191,9 +192,6 @@ export interface INotifySignupJob extends IEntityJob {
   tempPassword?: string;
 }
 
-export interface INotifyVerifyJob extends IEntityJob {
-  tempPassword?: string;
-}
 export interface INotifyAlbumInviteJob extends IEntityJob {
   recipientId: string;
 }
@@ -298,7 +296,8 @@ export type JobItem =
 
   // Notification
   | { name: JobName.SEND_EMAIL; data: IEmailJob }
-   |{ name: JobName.NOTIFY_EMAIL_VERIFIY; data: INotifyVerifyJob }
+  | { name: JobName.NOTIFY_EMAIL_VERIFIY; data: IEntityJob }
+  | { name: JobName.NOTIFY_RESETPASSWORD; data: IEntityJob }
   | { name: JobName.NOTIFY_ALBUM_INVITE; data: INotifyAlbumInviteJob }
   | { name: JobName.NOTIFY_ALBUM_UPDATE; data: INotifyAlbumUpdateJob }
   | { name: JobName.NOTIFY_SIGNUP; data: INotifySignupJob }
